[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Towers/BaseTower.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 250.0

[node name="BaseTower" type="Node2D"]
script = ExtResource( 3 )
towerName = "BaseTower"

[node name="Base" type="Sprite" parent="."]

[node name="Turret" type="Sprite" parent="."]
offset = Vector2( 12, 0 )

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 42, 0 )

[node name="Range" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource( 1 )

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="Range" to="." method="_on_Range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_Range_body_exited"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
